Fix app variable names + scrollbar

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,6 +1,6 @@
 .layout {
     display: grid;
-    grid-template-columns: 14rem auto;
+    grid-template-columns: 16rem auto;
     grid-template-rows: 4rem auto 4rem;
 
     width: 100vw;
@@ -47,6 +47,7 @@
 .version-button:hover {
     background-color: var(--light);
 }
+
 .version-button {
     transition: 0.3s;
     cursor: pointer;
@@ -167,6 +168,30 @@
     transition: 0.3s border-radius;
 }
 
+.app-list {
+    height: 100%;
+    scroll-behavior: smooth;
+    overflow-y: scroll;
+}
+
 .current {
     background-color: var(--lighter);
+}
+
+/* Custom Scrollbar https://github.com/IrishBruse/IrishBruse.github.io/blob/main/src/assets/css/scrollbar.css */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--light);
+}
+
+::-webkit-scrollbar-thumb {
+    background: white;
+    border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: lightgray;
 }
